--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -4,6 +4,8 @@ $theme-name: 'chester';
 $theme-bg-color: #2C3643;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
+// 主题主色调
+$theme-color:#CCCCCC;
 
 // 消息提示
 $theme-message-info-background-color: #FFFFFF;
@@ -29,6 +31,8 @@ $theme-multiple-page-control-background-color-active: #FFFFFF;
 $theme-menu-item-color-hover: #CCCCCC;
 $theme-menu-item-background-color-hover: #2A2D2E;
 
+// 顶栏title字体眼色
+$theme-header-title:$theme-color;
 // 顶栏上的文字颜色
 $theme-header-item-color: #CCCCCC;
 $theme-header-item-background-color: transparent;
