--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -4,6 +4,8 @@ $theme-name: 'd2';
 $theme-bg-color: #ebf1f6;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
+// 主题主色调
+$theme-color:#2f74ff;
 
 // 消息提示
 $theme-message-info-background-color: $color-bg;
@@ -17,7 +19,7 @@ $theme-container-border-inner: 1px solid #cfd7e5;
 $theme-container-border-outer: 1px solid #cfd7e5;
 
 $theme-multiple-page-control-color: $color-text-normal;
-$theme-multiple-page-control-color-active: #2f74ff;
+$theme-multiple-page-control-color-active:$theme-color;
 $theme-multiple-page-control-nav-prev-color: #cfd7e5;
 $theme-multiple-page-control-nav-next-color: #cfd7e5;
 $theme-multiple-page-control-border-color: #cfd7e5;
@@ -29,30 +31,32 @@ $theme-multiple-page-control-background-color-active: #FFF;
 $theme-menu-item-color-hover: #293849;
 $theme-menu-item-background-color-hover: #ecf5ff;
 
+// 顶栏title字体眼色
+$theme-header-title:$theme-color;
 // 顶栏上的文字颜色
 $theme-header-item-color: $color-text-normal;
 $theme-header-item-background-color: transparent;
 // 顶栏上的项目在 hover 时
-$theme-header-item-color-hover: #2f74ff;
+$theme-header-item-color-hover:$theme-color;
 $theme-header-item-background-color-hover: rgba(#FFF, .5);
 // 顶栏上的项目在 focus 时
-$theme-header-item-color-focus: #2f74ff;
+$theme-header-item-color-focus:$theme-color;
 $theme-header-item-background-color-focus: rgba(#FFF, .5);
 // 顶栏上的项目在 active 时
-$theme-header-item-color-active: #2f74ff;
+$theme-header-item-color-active: $theme-color;
 $theme-header-item-background-color-active: rgba(#FFF, .5);
 
 // 侧边栏上的文字颜色
 $theme-aside-item-color: $color-text-normal;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
-$theme-aside-item-color-hover: #2f74ff;
+$theme-aside-item-color-hover: $theme-color;
 $theme-aside-item-background-color-hover: rgba(#FFF, .5);
 // 侧边栏上的项目在 focus 时
-$theme-aside-item-color-focus: #2f74ff;
+$theme-aside-item-color-focus: $theme-color;
 $theme-aside-item-background-color-focus: rgba(#FFF, .5);
 // 侧边栏上的项目在 active 时
-$theme-aside-item-color-active: #2f74ff;
+$theme-aside-item-color-active: $theme-color;
 $theme-aside-item-background-color-active: rgba(#FFF, .5);
 
 // 侧边栏菜单为空的时候显示的元素
