--- a/src/assets/style/theme/element/setting.scss
+++ b/src/assets/style/theme/element/setting.scss
@@ -4,6 +4,9 @@ $theme-name: 'element';
 $theme-bg-color: #314255;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
+// 主题主色调
+$theme-color:#BFCBD9;
+
 
 // 消息提示
 $theme-message-info-background-color: #FFFFFF;
@@ -16,10 +19,10 @@ $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid #CFD7E5;
 $theme-container-border-outer: 1px solid #011527;
 
-$theme-multiple-page-control-color: #BFCBD9;
+$theme-multiple-page-control-color:$theme-color;
 $theme-multiple-page-control-color-active: #46A0FC;
-$theme-multiple-page-control-nav-prev-color: #BFCBD9;
-$theme-multiple-page-control-nav-next-color: #BFCBD9;
+$theme-multiple-page-control-nav-prev-color: $theme-color;
+$theme-multiple-page-control-nav-next-color: $theme-color;
 $theme-multiple-page-control-border-color: #011527;
 $theme-multiple-page-control-border-color-active: #FFFFFF;
 $theme-multiple-page-control-background-color: #212D3D;
@@ -29,35 +32,37 @@ $theme-multiple-page-control-background-color-active: #FFFFFF;
 $theme-menu-item-color-hover: #BFCBD9;
 $theme-menu-item-background-color-hover: #011527;
 
+// 顶栏title字体眼色
+$theme-header-title:$theme-color;
 // 顶栏上的文字颜色
-$theme-header-item-color: #BFCBD9;
+$theme-header-item-color: $theme-color;
 $theme-header-item-background-color: transparent;
 // 顶栏上的项目在 hover 时
-$theme-header-item-color-hover: #BFCBD9;
+$theme-header-item-color-hover: $theme-color;
 $theme-header-item-background-color-hover: #011527;
 // 顶栏上的项目在 focus 时
-$theme-header-item-color-focus: #BFCBD9;
+$theme-header-item-color-focus: $theme-color;
 $theme-header-item-background-color-focus: #202D3D;
 // 顶栏上的项目在 active 时
 $theme-header-item-color-active: #46A0FC;
 $theme-header-item-background-color-active: #202D3D;
 
 // 侧边栏上的文字颜色
-$theme-aside-item-color: #BFCBD9;
+$theme-aside-item-color:$theme-color;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
-$theme-aside-item-color-hover: #BFCBD9;
+$theme-aside-item-color-hover: $theme-color;
 $theme-aside-item-background-color-hover: #011527;
 // 侧边栏上的项目在 focus 时
-$theme-aside-item-color-focus: #BFCBD9;
+$theme-aside-item-color-focus: $theme-color;
 $theme-aside-item-background-color-focus: #202D3D;
 // 侧边栏上的项目在 active 时
 $theme-aside-item-color-active: #46A0FC;
 $theme-aside-item-background-color-active: #202D3D;
 
 // 侧边栏菜单为空的时候显示的元素
-$theme-aside-menu-empty-icon-color: #BFCBD9;
-$theme-aside-menu-empty-text-color: #BFCBD9;
+$theme-aside-menu-empty-icon-color: $theme-color;
+$theme-aside-menu-empty-text-color: $theme-color;
 $theme-aside-menu-empty-background-color: #202D3D;
 $theme-aside-menu-empty-icon-color-hover: #46A0FC;
 $theme-aside-menu-empty-text-color-hover: #46A0FC;
