--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -4,6 +4,9 @@ $theme-name: 'line';
 $theme-bg-color: #f8f8f9;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
+// 主题主色调
+$theme-color:$color-text-normal;
+
 
 // 消息提示
 $theme-message-info-background-color: $color-bg;
@@ -29,6 +32,8 @@ $theme-multiple-page-control-background-color-active: #FFF;
 $theme-menu-item-color-hover: #293849;
 $theme-menu-item-background-color-hover: #EFEFEF;
 
+// 顶栏title字体眼色
+$theme-header-title:$theme-color;
 // 顶栏上的文字颜色
 $theme-header-item-color: $color-text-normal;
 $theme-header-item-background-color: transparent;
