--- a/src/assets/style/theme/violet/setting.scss
+++ b/src/assets/style/theme/violet/setting.scss
@@ -4,6 +4,9 @@ $theme-name: 'violet';
 $theme-bg-color: #000;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
+// 主题主色调
+$theme-color:#FFF;
+
 
 // 消息提示
 $theme-message-info-background-color: $color-bg;
@@ -29,31 +32,33 @@ $theme-multiple-page-control-background-color-active: #FFF;
 $theme-menu-item-color-hover: #293849;
 $theme-menu-item-background-color-hover: #ecf5ff;
 
+// 顶栏title字体眼色
+$theme-header-title:$theme-color;
 // 顶栏上的文字颜色
 $theme-header-item-color: #FFF;
 $theme-header-item-background-color: transparent;
 // 顶栏上的项目在 hover 时
 $theme-header-item-color-hover: #FFF;
-$theme-header-item-background-color-hover: linear-gradient(-180deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0.12) 100%);
+$theme-header-item-background-color-hover: linear-gradient(-180deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.12) 100%);
 // 顶栏上的项目在 focus 时
 $theme-header-item-color-focus: #FFF;
-$theme-header-item-background-color-focus: linear-gradient(-180deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0.12) 100%);
+$theme-header-item-background-color-focus: linear-gradient(-180deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.12) 100%);
 // 顶栏上的项目在 active 时
 $theme-header-item-color-active: #FFF;
-$theme-header-item-background-color-active: linear-gradient(-180deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0.12) 100%);
+$theme-header-item-background-color-active: linear-gradient(-180deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.12) 100%);
 
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #FFF;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
 $theme-aside-item-color-hover: #FFF;
-$theme-aside-item-background-color-hover: linear-gradient(90deg, rgba(255,255,255,0.28) 0%, rgba(255,255,255,0.00) 100%);
+$theme-aside-item-background-color-hover: linear-gradient(90deg, rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.00) 100%);
 // 侧边栏上的项目在 focus 时
 $theme-aside-item-color-focus: #FFF;
-$theme-aside-item-background-color-focus: linear-gradient(90deg, rgba(255,255,255,0.28) 0%, rgba(255,255,255,0.00) 100%);
+$theme-aside-item-background-color-focus: linear-gradient(90deg, rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.00) 100%);
 // 侧边栏上的项目在 active 时
 $theme-aside-item-color-active: #FFF;
-$theme-aside-item-background-color-active: linear-gradient(90deg, rgba(255,255,255,0.28) 0%, rgba(255,255,255,0.00) 100%);
+$theme-aside-item-background-color-active: linear-gradient(90deg, rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.00) 100%);
 
 // 侧边栏菜单为空的时候显示的元素
 $theme-aside-menu-empty-icon-color: #FFF;
