📦 NEW: layout-header-title 布局

--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -27,6 +27,8 @@ $theme-multiple-page-control-border-color-active: #FFFFFF;
 $theme-multiple-page-control-background-color: #242D38;
 $theme-multiple-page-control-background-color-active: #FFFFFF;
 
+// 顶栏背景色
+$theme-header-bg:#fff;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #CCCCCC;
 $theme-menu-item-background-color-hover: #2A2D2E;
