--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -28,6 +28,8 @@ $theme-multiple-page-control-border-color-active: #FFF;
 $theme-multiple-page-control-background-color: rgba(#FFF, .5);
 $theme-multiple-page-control-background-color-active: #FFF;
 
+// 顶栏背景色
+$theme-header-bg:#fff;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
 $theme-menu-item-background-color-hover: #ecf5ff;
