📦 NEW: 添加header menu下横线

--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -33,6 +33,8 @@ $theme-header-bg:#fff;
 $theme-menu-item-color-hover: #293849;
 $theme-menu-item-background-color-hover: #ecf5ff;
 
+// 顶栏menu 滑动条样式
+$theme-slider-line:$theme-color;
 // 顶栏title字体眼色
 $theme-header-title:$theme-color;
 // 顶栏上的文字颜色
