--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -28,6 +28,9 @@ $theme-multiple-page-control-border-color-active: #FFF;
 $theme-multiple-page-control-background-color: #cfd7e5;
 $theme-multiple-page-control-background-color-active: #FFF;
 
+
+// 顶栏menu 滑动条样式
+$theme-slider-line:$theme-color;
 // 顶栏背景色
 $theme-header-bg:#fff;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
