--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -33,6 +33,9 @@ $theme-header-bg:#fff;
 $theme-menu-item-color-hover: #CCCCCC;
 $theme-menu-item-background-color-hover: #2A2D2E;
 
+
+// 顶栏menu 滑动条样式
+$theme-slider-line:$theme-color;
 // 顶栏title字体眼色
 $theme-header-title:$theme-color;
 // 顶栏上的文字颜色
