--- a/src/assets/style/theme/element/setting.scss
+++ b/src/assets/style/theme/element/setting.scss
@@ -28,6 +28,9 @@ $theme-multiple-page-control-border-color-active: #FFFFFF;
 $theme-multiple-page-control-background-color: #212D3D;
 $theme-multiple-page-control-background-color-active: #FFFFFF;
 
+
+// 顶栏menu 滑动条样式
+$theme-slider-line:$theme-color;
 // 顶栏背景色
 $theme-header-bg:#fff;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
