📦 NEW: 修改menu-icon 动画

--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -119,6 +119,14 @@
           color: $theme-header-item-color-hover;
         }
       }
+
+      #menu-icon-wrapper {
+        svg {
+          path {
+            stroke: $theme-header-item-color;
+          }
+        }
+      }
     }
 
     // 顶栏菜单
