--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -5,7 +5,7 @@ $theme-bg-color: #2C3643;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
 // 主题主色调
-$theme-color:#CCCCCC;
+$theme-color:#2C3643;
 
 // 消息提示
 $theme-message-info-background-color: #FFFFFF;
@@ -28,16 +28,16 @@ $theme-multiple-page-control-background-color: #242D38;
 $theme-multiple-page-control-background-color-active: #FFFFFF;
 
 // 顶栏背景色
-$theme-header-bg:#fff;
+$theme-header-bg:$theme-color;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #CCCCCC;
 $theme-menu-item-background-color-hover: #2A2D2E;
 
 
 // 顶栏menu 滑动条样式
-$theme-slider-line:$theme-color;
+$theme-slider-line:#FFFFFF;
 // 顶栏title字体眼色
-$theme-header-title:$theme-color;
+$theme-header-title:#FFFFFF;
 // 顶栏上的文字颜色
 $theme-header-item-color: #CCCCCC;
 $theme-header-item-background-color: transparent;
