📦 NEW: element 主题色修改

--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -51,6 +51,8 @@ $theme-header-item-background-color-focus: #222A34;
 $theme-header-item-color-active: #FFFFFF;
 $theme-header-item-background-color-active: #222A34;
 
+// 侧边栏背景颜色
+$theme-aside-background:transparent;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #CCCCCC;
 $theme-aside-item-background-color: transparent;
