--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -52,6 +52,8 @@ $theme-header-item-background-color-focus: rgba(#000, .02);
 $theme-header-item-color-active: $color-text-main;
 $theme-header-item-background-color-active: rgba(#000, .03);
 
+// 侧边栏背景颜色
+$theme-aside-background:transparent;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: $color-text-normal;
 $theme-aside-item-background-color: transparent;
