--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -52,6 +52,8 @@ $theme-header-item-background-color-focus: rgba(#000, .2);
 $theme-header-item-color-active: #FFF;
 $theme-header-item-background-color-active: rgba(#000, .3);
 
+// 侧边栏背景颜色
+$theme-aside-background:transparent;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #FFF;
 $theme-aside-item-background-color: transparent;
