--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -141,11 +141,11 @@
         }
 
         &:hover {
-          color: $theme-header-item-color-hover;
-          background: $theme-header-item-background-color-hover;
+          color: $theme-header-item-color-hover !important;
+          background: $theme-header-item-background-color-hover !important;
 
           i.fa {
-            color: inherit;
+            color: inherit !important;
           }
         }
 
@@ -249,6 +249,7 @@
 
     // 侧边栏
     .w-theme-container-aside {
+      background-color: $theme-aside-background;
 
       // 菜单为空的时候显示的信息
       .d2-layout-header-aside-menu-empty {
