--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -51,6 +51,8 @@ $theme-header-item-background-color-focus: rgba(#FFF, .05);
 $theme-header-item-color-active: #FFB870;
 $theme-header-item-background-color-active: rgba(#FFF, .05);
 
+// 侧边栏背景颜色
+$theme-aside-background:transparent;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #FF929A;
 $theme-aside-item-background-color: transparent;
