--- a/src/assets/style/theme/violet/setting.scss
+++ b/src/assets/style/theme/violet/setting.scss
@@ -52,6 +52,8 @@ $theme-header-item-background-color-focus: linear-gradient(-180deg, rgba(255, 25
 $theme-header-item-color-active: #FFF;
 $theme-header-item-background-color-active: linear-gradient(-180deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.12) 100%);
 
+// 侧边栏背景颜色
+$theme-aside-background:transparent;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #FFF;
 $theme-aside-item-background-color: transparent;
