--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -1,7 +1,7 @@
 // 主题名称
 $theme-name: 'chester';
 // 主题背景颜色
-$theme-bg-color: #2C3643;
+$theme-bg-color: #212429;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
 // 主题主色调
@@ -28,7 +28,7 @@ $theme-multiple-page-control-background-color: #242D38;
 $theme-multiple-page-control-background-color-active: #FFFFFF;
 
 // 顶栏背景色
-$theme-header-bg:$theme-color;
+$theme-header-bg:#292A2E;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #CCCCCC;
 $theme-menu-item-background-color-hover: #2A2D2E;
@@ -52,7 +52,7 @@ $theme-header-item-color-active: #FFFFFF;
 $theme-header-item-background-color-active: #222A34;
 
 // 侧边栏背景颜色
-$theme-aside-background:transparent;
+$theme-aside-background:#2e2f33;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #CCCCCC;
 $theme-aside-item-background-color: transparent;
