--- a/src/assets/style/theme/chester/setting.scss
+++ b/src/assets/style/theme/chester/setting.scss
@@ -1,7 +1,7 @@
 // 主题名称
 $theme-name: 'chester';
 // 主题背景颜色
-$theme-bg-color: #212429;
+$theme-bg-color: #F0F2F5;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
 // 主题主色调
@@ -9,8 +9,8 @@ $theme-color:#2C3643;
 
 // 消息提示
 $theme-message-info-background-color: #FFFFFF;
-$theme-message-info-text-color: #222A34;
-$theme-message-info-border-color: #222A34;
+$theme-message-info-text-color: $color-text-normal;
+$theme-message-info-border-color: $color-border-1;
 
 // container组件
 $theme-container-background-color: rgba(#FFF, 1);
@@ -18,20 +18,20 @@ $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid #CFD7E5;
 $theme-container-border-outer: 1px solid #2A2D2E;
 
-$theme-multiple-page-control-color: #CCCCCC;
-$theme-multiple-page-control-color-active: #242D38;
-$theme-multiple-page-control-nav-prev-color: #CCCCCC;
-$theme-multiple-page-control-nav-next-color: #CCCCCC;
-$theme-multiple-page-control-border-color: #2A2D2E;
+$theme-multiple-page-control-color:rgba($color-text-normal, 0.6);
+$theme-multiple-page-control-color-active: #46A0FC;
+$theme-multiple-page-control-nav-prev-color: #cfd7e5;
+$theme-multiple-page-control-nav-next-color: #cfd7e5;
+$theme-multiple-page-control-border-color: #cfd7e5;
 $theme-multiple-page-control-border-color-active: #FFFFFF;
-$theme-multiple-page-control-background-color: #242D38;
+$theme-multiple-page-control-background-color:rgba(#fff, 0.7);
 $theme-multiple-page-control-background-color-active: #FFFFFF;
 
 // 顶栏背景色
-$theme-header-bg:#292A2E;
+$theme-header-bg:#172331;
 // 顶栏和侧边栏中展开的菜单 hover 状态下
-$theme-menu-item-color-hover: #CCCCCC;
-$theme-menu-item-background-color-hover: #2A2D2E;
+$theme-menu-item-color-hover: #FFFFFF;
+$theme-menu-item-background-color-hover:rgba(#222A34, 0.4);
 
 
 // 顶栏menu 滑动条样式
@@ -52,19 +52,19 @@ $theme-header-item-color-active: #FFFFFF;
 $theme-header-item-background-color-active: #222A34;
 
 // 侧边栏背景颜色
-$theme-aside-background:#2e2f33;
+$theme-aside-background:#304156;
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #CCCCCC;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
 $theme-aside-item-color-hover: #CCCCCC;
-$theme-aside-item-background-color-hover: #2A2D2E;
+$theme-aside-item-background-color-hover: rgba(#222A34, 0.4);
 // 侧边栏上的项目在 focus 时
 $theme-aside-item-color-focus: #CCCCCC;
-$theme-aside-item-background-color-focus: #222A34;
+$theme-aside-item-background-color-focus: rgba(#222A34, 0.4);
 // 侧边栏上的项目在 active 时
-$theme-aside-item-color-active: #FFFFFF;
-$theme-aside-item-background-color-active: #222A34;
+$theme-aside-item-color-active: #409EFF;
+$theme-aside-item-background-color-active: rgba(#222A34, 0.4);
 
 // 侧边栏菜单为空的时候显示的元素
 $theme-aside-menu-empty-icon-color: #CCCCCC;
