🐛 FIX: 修复定位问题

--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -137,6 +137,10 @@
 
         .w-theme-container-main-body {
           position: relative;
+
+          .layout-content-main-posions {
+            position: absolute;
+          }
         }
       }
     }
