--- a/src/assets/style/fixed/base.scss
+++ b/src/assets/style/fixed/base.scss
@@ -1,10 +1,16 @@
+// 补丁 base
+// @import '~@/assets/style/fixed/_reset.scss';
+
 // 优化显示
-html, body {
+html,
+body {
   margin: 0px;
   height: 100%;
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+
   #app {
     @extend %full;
+
     a {
       text-decoration: none;
     }
