--- a/src/assets/style/fixed/element.scss
+++ b/src/assets/style/fixed/element.scss
@@ -1,11 +1,12 @@
 // element 样式补丁
 .el-card {
   &.is-always-shadow {
-    box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
+    box-shadow: 0 0 8px 0 rgba(232, 237, 250, .6), 0 2px 4px 0 rgba(232, 237, 250, .5);
   }
+
   &.is-hover-shadow {
     &:hover {
-      box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
+      box-shadow: 0 0 8px 0 rgba(232, 237, 250, .6), 0 2px 4px 0 rgba(232, 237, 250, .5);
     }
   }
 }
@@ -28,4 +29,9 @@
 .el-table th.gutter,
 .el-table colgroup.gutter {
   display: table-cell !important;
+}
+
+// Chrome下div 有默认行为
+.el-drawer {
+  outline: none !important;
 }
