📦 NEW: 添加一个key强制驱动页面刷新

--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -118,6 +118,27 @@
         }
       }
 
+      .transition-persoective {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        perspective: 1200px;
+
+        .transition-container {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          overflow: hidden;
+          backface-visibility: hidden;
+          transform: translate3d(0, 0, 0);
+          transform-style: preserve-3d;
+          visibility: visible;
+        }
+      }
+
       .w-theme-container-transition {
         transition: width .3s;
       }
